--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Ubuntu:300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+  <h1 class="visually-hidden">Lifestyle Website</h1>
   <header>
     <nav class="main-nav">
       <ul>
