Added inline-block and margin for navigation, margin and padding to body

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -16,10 +16,10 @@
   <header>
     <nav class="main-nav">
       <ul>
-        <li class="main-nav-item"><a href="#">lifestyle</a></li>
-        <li class="main-nav-item"><a href="#">photodiary</a></li>
-        <li class="main-nav-item"><a href="#">music</a></li>
-        <li class="main-nav-item"><a href="#">travel</a></li>
+        <li class="main-nav-item lifestyle"><a href="#">lifestyle</a></li>
+        <li class="main-nav-item photodiary"><a href="#">photodiary</a></li>
+        <li class="main-nav-item music"><a href="#">music</a></li>
+        <li class="main-nav-item travel"><a href="#">travel</a></li>
       </ul>
     </nav>
   </header>
