added padding to body, margin to articles

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -25,7 +25,7 @@
   </header>
   <main>
     <section>
-      <article class="article-firstrow-left-item">
+      <article class="article firstrow-left-item">
         <img src="img/girl_on_shoulder_top_left.png" alt="Illustration" width="420" height="280">
         <p class="caption">lifestyle</p>
         <h2>More than just a music festival</h2>
@@ -43,7 +43,7 @@
           incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
         </p>
       </article>
-      <article class="article-firstrow-right-item">
+      <article class="article firstrow-right-item">
         <img src="img/cup_in_hands_top_right.png" alt="Illustration" width="420" height="280">
         <p class="caption">lifestyle</p>
         <h2>Life tastes better with coffee</h2>
@@ -62,7 +62,7 @@
           incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
         </p>
       </article>
-      <article class="article-secondrow-left-item">
+      <article class="article secondrow-left-item">
         <img src="img/two_girls_and_bridge_bottom_left.png" alt="Illustration" width="420" height="280">
         <p class="caption">photodiary</p>
         <h2>American dream</h2>
@@ -81,7 +81,7 @@
           incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
         </p>
       </article>
-      <article class="article-secondrow-right-item">
+      <article class="article secondrow-right-item">
         <img src="img/man_back_bottom_right.png" alt="Illustration" width="420" height="280">
         <p class="caption">photodiary</p>
         <h2>A day exploring the Alps</h2>
