--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -62,6 +62,7 @@
           incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
         </p>
       </article>
+      <div class="article-separation"></div>
       <article class="article secondrow-left-item">
         <img src="img/two_girls_and_bridge_bottom_left.png" alt="Illustration" width="420" height="280">
         <p class="caption">photodiary</p>
