Final beautify css, inline margin remove

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -101,7 +101,7 @@
           incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
         </p>
       </article>
-      <button>Load more</button>
+      <button class="button">Load more</button>
     </section>
   </main>
 
