--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <h1 class="visually-hidden">Lifestyle Website</h1>
+
   <header>
     <nav class="main-nav">
       <ul>
@@ -24,7 +24,8 @@
     </nav>
   </header>
   <main>
-    <section>
+    <section class="main-section">
+      <h1 class="visually-hidden">Lifestyle Website</h1>
       <article class="article firstrow-left-item">
         <img src="img/girl_on_shoulder_top_left.png" alt="Illustration" width="420" height="280">
         <p class="caption">lifestyle</p>
