Some new amendment, box-sizing to html added, margin recalculating

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <header class="superheader">
       <nav class="main-nav">
-        <ul>
+        <ul class="main-nav-list">
           <li class="main-nav-item lifestyle"><a href="#">lifestyle</a></li>
           <li class="main-nav-item photodiary"><a href="#">photodiary</a></li>
           <li class="main-nav-item music"><a href="#">music</a></li>
@@ -28,79 +28,47 @@
       <section class="main-section">
         <h1 class="visually-hidden">Lifestyle Website</h1>
         <article class="article firstrow-left-item">
-          <img src="img/girl_on_shoulder_top_left.png" alt="Illustration" width="420" height="280">
+          <img src="img/girl_on_shoulder_top_left.png" class="article-illustration" alt="Illustration" width="420"
+            height="280">
           <p class="caption">lifestyle</p>
           <h2 class="heading2">More than just a music festival</h2>
-          <p class="main-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-            in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis
-            unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-            magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
-            ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
-            incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+          <p class="main-text">Neque porro quisquam est qui dolorem ipsum quia
+            dolor sit amet, consectetur, adipisci velit. Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad.
           </p>
         </article>
         <article class="article firstrow-right-item">
-          <img src="img/cup_in_hands_top_right.png" alt="Illustration" width="420" height="280">
+          <img src="img/cup_in_hands_top_right.png" class="article-illustration" alt="Illustration" width="420"
+            height="280">
           <p class="caption">lifestyle</p>
           <h2 class="heading2">Life tastes better with coffee</h2>
-          <p class="main-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit. Lorem ipsum
-            dolor
-            sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-            in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis
-            unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-            magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
-            ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
-            incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+          <p class="main-text">Neque porro quisquam est qui dolorem ipsum quia
+            dolor sit amet, consectetur, adipisci velit. Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad.
           </p>
         </article>
-        <div class="article-separation"></div>
         <article class="article secondrow-left-item">
-          <img src="img/two_girls_and_bridge_bottom_left.png" alt="Illustration" width="420" height="280">
+          <img src="img/two_girls_and_bridge_bottom_left.png" class="article-illustration" alt="Illustration"
+            width="420" height="280">
           <p class="caption">photodiary</p>
           <h2 class="heading2">American dream</h2>
-          <p class="main-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit. Lorem ipsum
-            dolor
-            sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-            in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis
-            unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-            magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
-            ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
-            incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+          <p class="main-text">Neque porro quisquam est qui dolorem ipsum quia
+            dolor sit amet, consectetur, adipisci velit. Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad.
           </p>
         </article>
         <article class="article secondrow-right-item">
-          <img src="img/man_back_bottom_right.png" alt="Illustration" width="420" height="280">
+          <img src="img/man_back_bottom_right.png" class="article-illustration" alt="Illustration" width="420"
+            height="280">
           <p class="caption">photodiary</p>
           <h2 class="heading2">A day exploring the Alps</h2>
-          <p class="main-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit. Lorem ipsum
-            dolor
-            sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-            in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis
-            unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-            magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
-            ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
-            incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+          <p class="main-text">Neque porro quisquam est qui dolorem ipsum quia
+            dolor sit amet, consectetur, adipisci velit. Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad.
           </p>
         </article>
         <button class="button">Load more</button>
