--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -7,75 +7,118 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Ubuntu:300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
   <div class="container">
-    <header class="superheader">
-      <nav class="main-nav">
-        <ul class="main-nav-list">
-          <li class="main-nav-item lifestyle"><a href="#">lifestyle</a></li>
-          <li class="main-nav-item photodiary"><a href="#">photodiary</a></li>
-          <li class="main-nav-item music"><a href="#">music</a></li>
-          <li class="main-nav-item travel"><a href="#">travel</a></li>
+    <header class="main-header">
+      <nav class="main-menu clearfix">
+        <a href="#" class="logo-link">
+          <div class="logo">Mart</div>
+        </a>
+        <ul class="menu-list clearfix">
+          <li class="menu list-item"><a href="#">Contact us</a></li>
+          <li class="menu list-item"><a href="#">Blog</a></li>
+          <li class="menu list-item"><a href="#">Shop</a></li>
+          <li class="menu list-item"><a href="#">Page</a></li>
+          <li class="menu list-item"><a href="#">About us</a></li>
+          <li class="menu list-item"><a href="#">Home</a></li>
         </ul>
       </nav>
     </header>
-    <main>
-      <section class="main-section">
-        <h1 class="visually-hidden">Lifestyle Website</h1>
-        <article class="article firstrow-left-item">
-          <img src="img/girl_on_shoulder_top_left.png" class="article-illustration" alt="Illustration" width="420"
-            height="280">
-          <p class="caption">lifestyle</p>
-          <h2 class="heading2">More than just a music festival</h2>
-          <p class="main-text">Neque porro quisquam est qui dolorem ipsum quia
-            dolor sit amet, consectetur, adipisci velit. Lorem ipsum dolor sit
-            amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua. Ut enim ad.
-          </p>
-        </article>
-        <article class="article firstrow-right-item">
-          <img src="img/cup_in_hands_top_right.png" class="article-illustration" alt="Illustration" width="420"
-            height="280">
-          <p class="caption">lifestyle</p>
-          <h2 class="heading2">Life tastes better with coffee</h2>
-          <p class="main-text">Neque porro quisquam est qui dolorem ipsum quia
-            dolor sit amet, consectetur, adipisci velit. Lorem ipsum dolor sit
-            amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua. Ut enim ad.
-          </p>
-        </article>
-        <article class="article secondrow-left-item">
-          <img src="img/two_girls_and_bridge_bottom_left.png" class="article-illustration" alt="Illustration"
-            width="420" height="280">
-          <p class="caption">photodiary</p>
-          <h2 class="heading2">American dream</h2>
-          <p class="main-text">Neque porro quisquam est qui dolorem ipsum quia
-            dolor sit amet, consectetur, adipisci velit. Lorem ipsum dolor sit
-            amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua. Ut enim ad.
-          </p>
-        </article>
-        <article class="article secondrow-right-item">
-          <img src="img/man_back_bottom_right.png" class="article-illustration" alt="Illustration" width="420"
-            height="280">
-          <p class="caption">photodiary</p>
-          <h2 class="heading2">A day exploring the Alps</h2>
-          <p class="main-text">Neque porro quisquam est qui dolorem ipsum quia
-            dolor sit amet, consectetur, adipisci velit. Lorem ipsum dolor sit
-            amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua. Ut enim ad.
-          </p>
-        </article>
-        <button class="button">Load more</button>
+    <div class="main">
+      <h1 class="visually-hidden">Cloth Store</h1>
+      <section class="featured-section clearfix">
+        <h2>Featured products</h2>
+        <a href="#" class="featured-item">
+          <img src="img/featured-images/blue-sandal.png" alt="Blue Sandal" class="featured-image" width="255" height="283">
+          <div class="caption clearfix">
+            <div class="product-name">Cool Lingerie</div>
+            <div class="sum">$28</div>
+          </div>
+        </a>
+        <a href="#" class="featured-item">
+          <img src="img/featured-images/brown-belt.png" alt="Brown Belt" class="featured-image" width="255" height="283">
+          <div class="caption">
+            <div class="product-name">Cool Lingerie</div>
+            <div class="sum">$28</div>
+          </div>
+        </a>
+        <a href="#" class="featured-item">
+          <img src="img/featured-images/checkered-hat.png" alt="Checkered Hat" class="featured-image" width="255" height="283">
+          <div class="caption">
+            <div class="product-name">Cool Lingerie</div>
+            <div class="sum">$28</div>
+          </div>
+        </a>
+        <a href="#" class="featured-item">
+          <img src="img/featured-images/jeans-handbag.png" alt="Jeans Handbag" class="featured-image" width="255" height="283">
+          <div class="caption">
+            <div class="product-name">Cool Lingerie</div>
+            <div class="sum">$28</div>
+          </div>
+        </a>
+        <a href="#" class="featured-item">
+          <img src="img/featured-images/black-bag.png" alt="Black Bag" class="featured-image" width="255" height="283">
+          <div class="caption">
+            <div class="product-name">Cool Lingerie</div>
+            <div class="sum">$28</div>
+          </div>
+        </a>
+        <a href="#" class="featured-item">
+          <img src="img/featured-images/black-belt.png" alt="Black Belt" class="featured-image" width="255" height="283">
+          <div class="caption">
+            <div class="product-name">Cool Lingerie</div>
+            <div class="sum">$28</div>
+          </div>
+        </a>
+        <a href="#" class="featured-item">
+          <img src="img/featured-images/brown-shoes.png" alt="Brown Shoes" class="featured-image" width="255" height="283">
+          <div class="caption">
+            <div class="product-name">Cool Lingerie</div>
+            <div class="sum">$28</div>
+          </div>
+        </a>
+        <a href="#" class="featured-item">
+          <img src="img/featured-images/glasses.png" alt="Glasses" class="featured-image" width="255" height="283">
+          <div class="caption">
+            <div class="product-name">Cool Lingerie</div>
+            <div class="sum">$28</div>
+          </div>
+        </a>
       </section>
-    </main>
+      <section class="news-section clearfix">
+        <h2>Latest news</h2>
+        <ul class="news-list clearfix">
+          <li class="news-item">
+            <img src="img/news-images/pad.png" alt="Map on Pad" class="news-image" width="350" height="263">
+            <p class="news-image-caption">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur delectus.</p>
+            <p class="news-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
+              ipsum dolor siterror suscipit dolorum impedit reiciendis nam.</p>
+            <button class="button">Read more</button>
+          </li>
+          <li class="news-item">
+            <img src="img/news-images/two-women.png" alt="Two Women" class="news-image" width="350" height="263">
+            <p class="news-image-caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui dicta?</p>
+            <p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. tur cumque odit eum nesciunt. Cupiditate sequi quasi quidem. Itaque.</p>
+            <button class="button">Read more</button>
+          </li>
+          <li class="news-item">
+            <img src="img/news-images/bus.png" alt="Bus" class="news-image" width="350" height="263">
+            <p class="news-image-caption">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio quam.
+            </p>
+            <p class="news-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              e quisquam reprehenderit magnam! Pariatur magnam quasi ad ipsum.
+            </p>
+            <button class="button">Read more</button>
+          </li>
+        </ul>
+      </section>
+    </div>
   </div>
-
 </body>
 
 </html>
