Amended as per mentor's request

--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -19,77 +19,111 @@
           <div class="logo">Mart</div>
         </a>
         <ul class="menu-list clearfix">
-          <li class="menu list-item"><a href="#">Contact us</a></li>
-          <li class="menu list-item"><a href="#">Blog</a></li>
-          <li class="menu list-item"><a href="#">Shop</a></li>
-          <li class="menu list-item"><a href="#">Page</a></li>
-          <li class="menu list-item"><a href="#">About us</a></li>
           <li class="menu list-item"><a href="#">Home</a></li>
+          <li class="menu list-item"><a href="#">About us</a></li>
+          <li class="menu list-item"><a href="#">Page</a></li>
+          <li class="menu list-item"><a href="#">Shop</a></li>
+          <li class="menu list-item"><a href="#">Blog</a></li>
+          <li class="menu list-item"><a href="#">Contact us</a></li>
         </ul>
       </nav>
     </header>
     <div class="main">
       <h1 class="visually-hidden">Cloth Store</h1>
-      <section class="featured-section clearfix">
+      <section class="featured-section">
         <h2>Featured products</h2>
-        <a href="#" class="featured-item">
-          <img src="img/featured-images/blue-sandal.png" alt="Blue Sandal" class="featured-image" width="255" height="283">
-          <div class="caption clearfix">
-            <div class="product-name">Cool Lingerie</div>
-            <div class="sum">$28</div>
-          </div>
-        </a>
-        <a href="#" class="featured-item">
-          <img src="img/featured-images/brown-belt.png" alt="Brown Belt" class="featured-image" width="255" height="283">
-          <div class="caption">
-            <div class="product-name">Cool Lingerie</div>
-            <div class="sum">$28</div>
-          </div>
-        </a>
-        <a href="#" class="featured-item">
-          <img src="img/featured-images/checkered-hat.png" alt="Checkered Hat" class="featured-image" width="255" height="283">
-          <div class="caption">
-            <div class="product-name">Cool Lingerie</div>
-            <div class="sum">$28</div>
-          </div>
-        </a>
-        <a href="#" class="featured-item">
-          <img src="img/featured-images/jeans-handbag.png" alt="Jeans Handbag" class="featured-image" width="255" height="283">
-          <div class="caption">
-            <div class="product-name">Cool Lingerie</div>
-            <div class="sum">$28</div>
-          </div>
-        </a>
-        <a href="#" class="featured-item">
-          <img src="img/featured-images/black-bag.png" alt="Black Bag" class="featured-image" width="255" height="283">
-          <div class="caption">
-            <div class="product-name">Cool Lingerie</div>
-            <div class="sum">$28</div>
-          </div>
-        </a>
-        <a href="#" class="featured-item">
-          <img src="img/featured-images/black-belt.png" alt="Black Belt" class="featured-image" width="255" height="283">
-          <div class="caption">
-            <div class="product-name">Cool Lingerie</div>
-            <div class="sum">$28</div>
-          </div>
-        </a>
-        <a href="#" class="featured-item">
-          <img src="img/featured-images/brown-shoes.png" alt="Brown Shoes" class="featured-image" width="255" height="283">
-          <div class="caption">
-            <div class="product-name">Cool Lingerie</div>
-            <div class="sum">$28</div>
-          </div>
-        </a>
-        <a href="#" class="featured-item">
-          <img src="img/featured-images/glasses.png" alt="Glasses" class="featured-image" width="255" height="283">
-          <div class="caption">
-            <div class="product-name">Cool Lingerie</div>
-            <div class="sum">$28</div>
-          </div>
-        </a>
+        <ul class="featured-section-list clearfix">
+          <li class="featured-item">
+            <a href="#" class="featured-item-link">
+              <img src="img/featured-images/blue-sandal.png"
+              alt="Blue Sandal" class="featured-image"
+              width="255" height="283">
+              <div class="caption clearfix">
+                <div class="product-name">Cool Lingerie</div>
+                <div class="sum">$28</div>
+              </div>
+            </a>
+          </li>
+          <li class="featured-item">
+            <a href="#" class="featured-item-link">
+              <img src="img/featured-images/brown-belt.png"
+              alt="Brown Belt" class="featured-image"
+              width="255" height="283">
+              <div class="caption">
+                <div class="product-name">Cool Lingerie</div>
+                <div class="sum">$28</div>
+              </div>
+            </a>
+          </li>
+          <li class="featured-item">
+            <a href="#" class="featured-item-link">
+              <img src="img/featured-images/checkered-hat.png"
+              alt="Checkered Hat" class="featured-image"
+              width="255" height="283">
+              <div class="caption">
+                <div class="product-name">Cool Lingerie</div>
+                <div class="sum">$28</div>
+              </div>
+            </a>
+          </li>
+          <li class="featured-item">
+            <a href="#" class="featured-item-link">
+              <img src="img/featured-images/jeans-handbag.png"
+              alt="Jeans Handbag" class="featured-image"
+              width="255" height="283">
+              <div class="caption">
+                <div class="product-name">Cool Lingerie</div>
+                <div class="sum">$28</div>
+              </div>
+            </a>
+          </li>
+          <li class="featured-item">
+            <a href="#" class="featured-item-link">
+              <img src="img/featured-images/black-bag.png"
+              alt="Black Bag" class="featured-image"
+              width="255" height="283">
+              <div class="caption">
+                <div class="product-name">Cool Lingerie</div>
+                <div class="sum">$28</div>
+              </div>
+            </a>
+          </li>
+          <li class="featured-item">
+            <a href="#" class="featured-item-link">
+              <img src="img/featured-images/black-belt.png"
+              alt="Black Belt" class="featured-image"
+              width="255" height="283">
+              <div class="caption">
+                <div class="product-name">Cool Lingerie</div>
+                <div class="sum">$28</div>
+              </div>
+            </a>
+          </li>
+          <li class="featured-item">
+            <a href="#" class="featured-item-link">
+              <img src="img/featured-images/brown-shoes.png"
+              alt="Brown Shoes" class="featured-image"
+              width="255" height="283">
+              <div class="caption">
+                <div class="product-name">Cool Lingerie</div>
+                <div class="sum">$28</div>
+              </div>
+            </a>
+          </li>
+          <li class="featured-item">
+            <a href="#" class="featured-item-link">
+              <img src="img/featured-images/glasses.png"
+              alt="Glasses" class="featured-image"
+              width="255" height="283">
+              <div class="caption">
+                <div class="product-name">Cool Lingerie</div>
+                <div class="sum">$28</div>
+              </div>
+            </a>
+          </li>
+        </ul>
       </section>
-      <section class="news-section clearfix">
+      <section class="news-section">
         <h2>Latest news</h2>
         <ul class="news-list clearfix">
           <li class="news-item">
@@ -98,13 +132,13 @@
               Aspernatur delectus.</p>
             <p class="news-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
               ipsum dolor siterror suscipit dolorum impedit reiciendis nam.</p>
-            <button class="button">Read more</button>
+            <a class="button">Read more</a>
           </li>
           <li class="news-item">
             <img src="img/news-images/two-women.png" alt="Two Women" class="news-image" width="350" height="263">
             <p class="news-image-caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui dicta?</p>
             <p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. tur cumque odit eum nesciunt. Cupiditate sequi quasi quidem. Itaque.</p>
-            <button class="button">Read more</button>
+            <a class="button">Read more</a>
           </li>
           <li class="news-item">
             <img src="img/news-images/bus.png" alt="Bus" class="news-image" width="350" height="263">
@@ -114,7 +148,7 @@
             <p class="news-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               e quisquam reprehenderit magnam! Pariatur magnam quasi ad ipsum.
             </p>
-            <button class="button">Read more</button>
+            <a class="button">Read more</a>
           </li>
         </ul>
       </section>
