Ammend links, added containers

--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -31,28 +31,29 @@
         </ul>
       </nav>
     </header>
-    <div class="main">
-      <h1 class="visually-hidden">Cloth Store</h1>
-      <div class="slider">
-        <ul class="slider-list">
-          <li class="slider-content">
-            <div class="image-underlayer"></div>
-            <img src="img/slide4.png" alt="Slider image with girls" class="advertise-image">
-            <div class="image-overlayer"></div>
-            <a href="#" class="advertise-link">
-              <p class="advertise-caption">
-                Affordable Paris tours
-              </p>
-              <p class="caption-detais">
-                City tours / Tour tickets / Tour guides
-              </p>
-            </a>
-          </li>
-        </ul>
-        <button class="slider-arrow left"></button>
-        <button class="slider-arrow right"></button>
-      </div>
-
+  </div>
+  <div class="main">
+    <h1 class="visually-hidden">Cloth Store</h1>
+    <div class="slider">
+      <ul class="slider-list">
+        <li class="slider-content">
+          <div class="image-underlayer"></div>
+          <img src="img/slide4.png" alt="Slider image with girls" class="advertise-image">
+          <div class="image-overlayer"></div>
+          <div class="advertise-text">
+            <p class="advertise-caption">
+              Affordable Paris tours
+            </p>
+            <p class="caption-detais">
+              City tours / Tour tickets / Tour guides
+            </p>
+          </div>
+        </li>
+      </ul>
+      <button class="slider-arrow left"></button>
+      <button class="slider-arrow right"></button>
+    </div>
+    <div class="container">
       <section class="new-collection-section">
         <h2>New collection</h2>
         <ul class="new-collection-list clearfix">
@@ -67,13 +68,13 @@
                 <span class="cart-caption">Add to cart</span>
               </button>
             </div>
-            <a href="#" class="new-collection-item-link">
+            <div class="new-collection-item-card">
               <img src="img/category-2.png" alt="Blue Sandal" class="new-collection-image" width="255" height="322">
-              <div class="caption clearfix">
+              <a href="#" class="caption">
                 <div class="product-name">Blue TShirt</div>
                 <div class="sum">$26</div>
-              </div>
-            </a>
+              </a>
+            </div>
           </li>
           <li class="new-collection-item">
             <div class="hover-menu">
@@ -86,13 +87,13 @@
                 <span class="cart-caption">Add to cart</span>
               </button>
             </div>
-            <a href="#" class="new-collection-item-link">
+            <div class="new-collection-item-card">
               <img src="img/category-1.png" alt="Brown Belt" class="new-collection-image" width="255" height="322">
-              <div class="caption">
+              <a href="#" class="caption">
                 <div class="product-name">Woman Shirt</div>
                 <div class="sum">$31</div>
-              </div>
-            </a>
+              </a>
+            </div>
           </li>
           <li class="new-collection-item">
             <div class="hover-menu">
@@ -105,13 +106,13 @@
                 <span class="cart-caption">Add to cart</span>
               </button>
             </div>
-            <a href="#" class="new-collection-item-link">
+            <div class="new-collection-item-card">
               <img src="img/category-4.png" alt="Checkered Hat" class="new-collection-image" width="255" height="322">
-              <div class="caption">
+              <a href="#" class="caption">
                 <div class="product-name">Yellow TShirt</div>
                 <div class="sum">$21</div>
-              </div>
-            </a>
+              </a>
+            </div>
           </li>
           <li class="new-collection-item">
             <div class="hover-menu">
@@ -124,24 +125,25 @@
                 <span class="cart-caption">Add to cart</span>
               </button>
             </div>
-            <a href="#" class="new-collection-item-link">
+            <div class="new-collection-item-card">
               <img src="img/category-3.png" alt="Jeans Handbag" class="new-collection-image" width="255" height="322">
-              <div class="caption">
+              <a href="#" class="caption">
                 <div class="product-name">Cool Lingerie</div>
                 <div class="sum">$56</div>
-              </div>
-            </a>
+              </a>
+            </div>
           </li>
         </ul>
       </section>
-
     </div>
-    <footer class="site-footer">
-      <p class="legal-info">
-        All Rights Reserved © Dokan | Designed <span class="footer-span">ThemenGraph</span>
-      </p>
-    </footer>
   </div>
+
+  <footer class="site-footer">
+    <p class="legal-info">
+      All Rights Reserved © Dokan | Designed <span class="footer-span">ThemenGraph</span>
+    </p>
+  </footer>
+
 </body>
 
 </html>
