Added pointer to submit button

--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -102,7 +102,8 @@
             <p class="member-caption">Graphic Design</p>
           </article>
           <article class="team-card">
-            <img src="img/Team-images/Campbell.png" alt="Member's Image" class="team-card-image" width="380" height="470">
+            <img src="img/Team-images/Campbell.png" alt="Member's Image" class="team-card-image" width="380"
+              height="470">
             <div class="team-card-hover-menu">
               <ul class="socials-list">
                 <li class="social-list-item">
