Corrections for first submition

--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -27,11 +27,13 @@
         </ul>
       </nav>
     </header>
-    <div class="main">
+    <main class="main-contain">
       <h1 class="visually-hidden">Design Store</h1>
       <section class="services">
-        <p class="second-header-style">We work with</p>
-        <h2 class="second-header">Amazing services</h2>
+        <h2 class="second-header">
+          <span class="second-header-style">We work with</span><br>
+          Amazing services
+        </h2>
         <div class="article-services-container">
           <article class="services-item alarm">
             <h3 class="service-third-header">Photography</h3>
@@ -72,8 +74,7 @@
         </div>
       </section>
       <section class="team">
-        <p class="second-header-style">Who we are </p>
-        <h2 class="second-header">Meet our team</h2>
+        <h2 class="second-header"><span class="second-header-style">Who we are </span><br>Meet our team</h2>
         <p class="team-caption">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -86,16 +87,24 @@
               <ul class="socials-list">
                 <li class="social-list-item">
                   <a href="https://www.facebook.com" class="social-item-link facebook" target="_blank">
-                    <!-- Facebook --></a></li>
+                    <!-- Facebook -->
+                  </a>
+                </li>
                 <li class="social-list-item">
                   <a href="https://twitter.com" class="social-item-link twitter" target="_blank">
-                    <!-- Twitter --></a></li>
+                    <!-- Twitter -->
+                  </a>
+                </li>
                 <li class="social-list-item">
                   <a href="https://www.pinterest.com" class="social-item-link pinterest" target="_blank">
-                    <!-- Pinterest --></a></li>
+                    <!-- Pinterest -->
+                  </a>
+                </li>
                 <li class="social-list-item">
                   <a href="https://www.instagram.com" class="social-item-link instagram" target="_blank">
-                    <!-- Instagram --></a></li>
+                    <!-- Instagram -->
+                  </a>
+                </li>
               </ul>
             </div>
             <p class="team-member-name">Matthew Dix</p>
@@ -108,16 +117,24 @@
               <ul class="socials-list">
                 <li class="social-list-item">
                   <a href="https://www.facebook.com" class="social-item-link facebook" target="_blank">
-                    <!-- Facebook --></a></li>
+                    <!-- Facebook -->
+                  </a>
+                </li>
                 <li class="social-list-item">
                   <a href="https://twitter.com" class="social-item-link twitter" target="_blank">
-                    <!-- Twitter --></a></li>
+                    <!-- Twitter -->
+                  </a>
+                </li>
                 <li class="social-list-item">
                   <a href="https://www.pinterest.com" class="social-item-link pinterest" target="_blank">
-                    <!-- Pinterest --></a></li>
+                    <!-- Pinterest -->
+                  </a>
+                </li>
                 <li class="social-list-item">
                   <a href="https://www.instagram.com" class="social-item-link instagram" target="_blank">
-                    <!-- Instagram --></a></li>
+                    <!-- Instagram -->
+                  </a>
+                </li>
               </ul>
             </div>
             <p class="team-member-name">Christopher Campbell</p>
@@ -129,23 +146,30 @@
               <ul class="socials-list">
                 <li class="social-list-item">
                   <a href="https://www.facebook.com" class="social-item-link facebook" target="_blank">
-                    <!-- Facebook --></a></li>
+                    <!-- Facebook -->
+                  </a>
+                </li>
                 <li class="social-list-item">
                   <a href="https://twitter.com" class="social-item-link twitter" target="_blank">
-                    <!-- Twitter --></a></li>
+                    <!-- Twitter -->
+                  </a>
+                </li>
                 <li class="social-list-item">
                   <a href="https://www.pinterest.com" class="social-item-link pinterest" target="_blank">
-                    <!-- Pinterest --></a></li>
+                    <!-- Pinterest -->
+                  </a>
+                </li>
                 <li class="social-list-item">
                   <a href="https://www.instagram.com" class="social-item-link instagram" target="_blank">
-                    <!-- Instagram --></a></li>
+                    <!-- Instagram -->
+                  </a>
+                </li>
               </ul>
             </div>
             <p class="team-member-name">Michael Fertig</p>
             <p class="member-caption">Developer</p>
           </article>
         </div>
-
       </section>
       <footer class="page-footer">
         <p class="legal-info">
@@ -157,7 +181,7 @@
           <input type="submit" value="subscribe" class="input-button">
         </form>
       </footer>
-    </div>
+    </main>
   </div>
 </body>
 
