Removed margin left, top, absolute and footer

--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container main-contain">
     <header class="main-header">
       <nav class="main-menu">
         <a href="#" class="logo-link">
@@ -28,7 +28,7 @@
     </header>
     <main class="main-contain">
       <h1 class="visually-hidden">Services-store</h1>
-      <section class="services">
+      <section class="services-section">
         <h2 class="secondary-title services">Services</h2>
         <p class="secondary-title-caption services">
           Lorem ipsum dolor sit amet consectetur.
@@ -37,43 +37,43 @@
           <li class="services-list-item">
             <h3 class="sub-title e-commerce">E-Commerce</h3>
             <p class="services-description">
-              Lorem ipsum dolor sit amet con sec tetur quod sit magni. Libero, ipsa eaque quasi sapiente.
+              Lorem ipsum dolor sit amet con sec tetur quod sit magni. Libero, mentor ipsa eaque quasi sapiente.
             </p>
           </li>
           <li class="services-list-item">
             <h3 class="sub-title responsive-web">Responsive Web</h3>
             <p class="services-description">
-              Lorem ipsum dolor sit amet con sec tetur quod sit magni. Libero, ipsa eaque quasi sapiente.
+              Lorem ipsum dolor sit amet con sec tetur quod sit magni. Libero, please ipsa eaque quasi sapiente.
             </p>
           </li>
           <li class="services-list-item">
             <h3 class="sub-title web-security">Web Security</h3>
             <p class="services-description">
-              Lorem ipsum dolor sit amet con sec tetur quod sit magni. Libero, ipsa eaque quasi sapiente.
+              Lorem ipsum dolor sit amet con sec tetur quod sit magni. Libero, ansame ipsa eaque quasi sapiente.
             </p>
           </li>
         </ul>
       </section>
     </main>
   </div>
-  <footer class="site-footer">
-    <div class="container">
-      <h2 class="secondary-title contact">Contact us</h2>
+  <section class="contact-us-section">
+    <div class="container contact-us-container">
+      <h2 class="secondary-title contact-us">Contact us</h2>
       <p class="secondary-title-caption contact-us">
         Lorem ipsum dolor sit amet consectetur.
       </p>
       <form method="GET" action="#" class="contact-us-form">
         <div class="input-column-50">
-          <input type="text" name="name" id="" autofocus placeholder="Your name *" required>
-          <input type="email" name="email" id="" placeholder="Your E-mail *" required>
-          <input type="text" name="mail_subject" id="" placeholder="Subject">
+          <input type="text" name="name" autofocus placeholder="Your name *" required autocomplete="off">
+          <input type="email" name="email" placeholder="Your E-mail *" required autocomplete="off">
+          <input type="text" name="mail_subject" placeholder="Subject" autocomplete="off">
         </div>
-        <textarea class="textarea-50" name="message_text" id="" cols="30" rows="6" placeholder="Your Message *"
-          required></textarea>
+        <textarea class="textarea-50" name="message_text" cols="30" rows="6" placeholder="Your Message *"
+          required autocomplete="off"></textarea>
         <button type="submit">Send Message</button>
       </form>
     </div>
-  </footer>
+  </section>
 </body>
 
 </html>
