Added header, removed spaces in image names

--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -16,13 +16,15 @@
     <section class="section about">
       <div class="container about">
         <header class="header">
-          <div class="header-contain">
-            <button type="submit" name="log_in">Log in</button>
-            <button type="submit" name="sign_up">Sign up</button>
+          <div class="header-buttons">
+            <div class="header-contain">
+              <button type="submit" name="log_in">Log in</button>
+              <button type="submit" name="sign_up">Sign up</button>
+            </div>
+            <a href="#" class="logo-link">
+              <div class="logo">URLAUBSGLÜCK</div>
+            </a>
           </div>
-          <a href="#" class="logo-link">
-            <div class="logo">URLAUBSGLÜCK</div>
-          </a>
         </header>
         <h1 class="main-title">Share your holiday dreams</h1>
         <p class="main-title-caption">
