--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -19,9 +19,7 @@
         <button type="submit" name="log_in">Log in</button>
         <button type="submit" name="sign_up">Sign up</button>
       </div>
-      <a href="#" class="logo-link">
-        <div class="logo">URLAUBSGLÜCK</div>
-      </a>
+      <a href="#" class="logo-link">URLAUBSGLÜCK</a>
     </div>
     <h1 class="main-title">Share your holiday dreams</h1>
     <p class="main-title-caption">
